[gd_scene load_steps=24 format=4 uid="uid://c105cledukim2"]

[ext_resource type="Script" path="res://Levels/Scripts/level.gd" id="1_kbb55"]
[ext_resource type="AudioStream" uid="uid://c4cghr2amj0nr" path="res://Levels/music/example_music_01.ogg" id="2_p2b06"]
[ext_resource type="PackedScene" uid="uid://5aiygfxhkutu" path="res://Tile Maps/grass_01.tscn" id="3_0emsu"]
[ext_resource type="PackedScene" uid="uid://dcw6xl07rmgpp" path="res://Props/Plants/plant.tscn" id="4_1g4l2"]
[ext_resource type="PackedScene" uid="uid://boo2hdty4mmwe" path="res://Levels/level_transition.tscn" id="5_bx5h1"]
[ext_resource type="PackedScene" uid="uid://bn7v7t45jj16k" path="res://npc/npc.tscn" id="7_ilov5"]
[ext_resource type="PackedScene" uid="uid://0tcwovdu53eu" path="res://npc/npc_behavior_wander.tscn" id="8_7ly36"]
[ext_resource type="Resource" uid="uid://cwlu4deeod7c6" path="res://npc/00_npc/npc_01.tres" id="8_n7tgc"]
[ext_resource type="PackedScene" uid="uid://d2ipprfu64xk0" path="res://Levels/player_spawn.tscn" id="9_wgwtb"]
[ext_resource type="PackedScene" uid="uid://c3g40030emhlk" path="res://interactables/dialog/dialog_interaction.tscn" id="10_hsxbq"]
[ext_resource type="Resource" uid="uid://bla42cs0yfeio" path="res://npc/00_npc/npc_02.tres" id="10_k8vj0"]
[ext_resource type="PackedScene" uid="uid://bnl05khmb7e1s" path="res://npc/npc_behavior_patrol.tscn" id="11_7o5jn"]
[ext_resource type="Script" path="res://interactables/dialog/scripts/dialog_text.gd" id="11_i3bl0"]
[ext_resource type="Resource" uid="uid://dp3xvapehejb8" path="res://npc/00_npc/npc_hero.tres" id="12_5po8f"]
[ext_resource type="PackedScene" uid="uid://cgqxs8s73xa3d" path="res://npc/patrol_location.tscn" id="12_y6ba8"]
[ext_resource type="Script" path="res://interactables/dialog/scripts/dialog_choice.gd" id="16_4aeui"]
[ext_resource type="Script" path="res://interactables/dialog/scripts/dialog_branch.gd" id="17_kchcd"]
[ext_resource type="PackedScene" uid="uid://dmklnug1go5j1" path="res://Props/pot/pot.tscn" id="18_7nsnu"]
[ext_resource type="Resource" uid="uid://beqn5bmhhjh1e" path="res://quests/recover_lost_flute.tres" id="19_f0h3u"]
[ext_resource type="PackedScene" uid="uid://du45p8lp106kn" path="res://interactables/dungeon/pressure_plate.tscn" id="19_fy8rw"]
[ext_resource type="PackedScene" uid="uid://t5qs0bu8qaj" path="res://quests/utility_nodes/quest_advance_trigger.tscn" id="20_ai520"]
[ext_resource type="Resource" uid="uid://dqdlk6qu2vot7" path="res://quests/long_quest.tres" id="21_jndck"]
[ext_resource type="PackedScene" uid="uid://dxdd7vl1cvfw5" path="res://quests/utility_nodes/quest_activated_switch.tscn" id="21_qpa7b"]

[node name="02" type="Node2D"]
script = ExtResource("1_kbb55")
music = ExtResource("2_p2b06")

[node name="Grass01" parent="." instance=ExtResource("3_0emsu")]
tile_map_data = PackedByteArray("AAD/////AAALAAYAAAD//wAAAAALAAcAAAD//wEAAAAOAAQAAAD//wIAAAAOAAUAAAD//wMAAAAOAAUAAAD//wQAAAAOAAUAAAD//wUAAAAOAAUAAAD//wYAAAAOAAUAAAD//wcAAAAOAAUAAAD//wgAAAAOAAUAAAAAAP//AAANAAYAAAAAAAAAAAANAAcAAAAAAAEAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAAUAAAAAAAAAAAAAAAYAAAAAAAAAAAAAAAcAAAAAAAEAAAAAAAgAAAAKAAQAAAABAP//AAAOAAYAAAABAAAAAAAOAAcAAAABAAEAAAAAAAAAAAABAAIAAAABAAIAAAABAAMAAAABAAEAAAABAAQAAAAAAAAAAAABAAUAAAAAAAAAAAABAAYAAAAAAAAAAAABAAcAAAAAAAEAAAABAAgAAAANAAQAAAACAP//AAAAAAIAAAACAAAAAAAAAAMAAAACAAEAAAACAAEAAAACAAIAAAACAAIAAAACAAMAAAACAAMAAAACAAQAAAAAAAAAAAACAAUAAAAAAAAAAAACAAYAAAAAAAAAAAACAAcAAAAAAAEAAAACAAgAAAALAAQAAAADAP//AAABAAEAAAADAAAAAAAAAAMAAAADAAEAAAAAAAAAAAADAAIAAAABAAIAAAADAAMAAAABAAEAAAADAAQAAAABAAIAAAADAAUAAAABAAMAAAADAAYAAAAAAAAAAAADAAcAAAAAAAEAAAADAAgAAAAMAAQAAAAEAP//AAAKAAYAAAAEAAAAAAAKAAcAAAAEAAEAAAAAAAAAAAAEAAIAAAACAAIAAAAEAAMAAAACAAMAAAAEAAQAAAACAAIAAAAEAAUAAAACAAMAAAAEAAYAAAACAAEAAAAEAAcAAAAAAAEAAAAEAAgAAAANAAQAAAAFAP//AAALAAYAAAAFAAAAAAALAAcAAAAFAAEAAAAAAAAAAAAFAAIAAAAAAAAAAAAFAAMAAAAAAAAAAAAFAAQAAAABAAIAAAAFAAUAAAABAAMAAAAFAAYAAAABAAIAAAAFAAcAAAABAAMAAAAFAAgAAAALAAQAAAAGAP//AAAMAAYAAAAGAAAAAAAMAAcAAAAGAAEAAAAAAAAAAAAGAAIAAAAAAAAAAAAGAAMAAAAAAAAAAAAGAAQAAAACAAIAAAAGAAUAAAACAAMAAAAGAAYAAAACAAIAAAAGAAcAAAACAAMAAAAGAAgAAAAMAAQAAAAHAP//AAAMAAYAAAAHAAAAAAAMAAcAAAAHAAEAAAAAAAAAAAAHAAIAAAAAAAAAAAAHAAMAAAAAAAAAAAAHAAQAAAABAAIAAAAHAAUAAAABAAMAAAAHAAYAAAAAAAAAAAAHAAcAAAAAAAEAAAAHAAgAAAANAAQAAAAIAP//AAAMAAYAAAAIAAAAAAAMAAcAAAAIAAIAAAAAAAAAAAAIAAMAAAAAAAAAAAAIAAQAAAACAAIAAAAIAAUAAAACAAMAAAAIAAYAAAAAAAAAAAAIAAcAAAAAAAEAAAAIAAgAAAALAAQAAAAJAP//AAAMAAYAAAAJAAAAAAAMAAcAAAAJAAEAAAAAAAEAAAAJAAIAAAABAAIAAAAJAAMAAAABAAMAAAAJAAQAAAABAAEAAAAJAAUAAAABAAMAAAAJAAYAAAAAAAAAAAAJAAcAAAAAAAEAAAAJAAgAAAAMAAQAAAAKAP//AAAMAAYAAAAKAAAAAAAMAAcAAAAKAAEAAAAAAAIAAAAKAAIAAAACAAIAAAAKAAMAAAACAAMAAAAKAAQAAAACAAIAAAAKAAUAAAACAAMAAAAKAAYAAAAAAAAAAAAKAAcAAAAAAAEAAAAKAAgAAAANAAQAAAALAP//AAAMAAYAAAALAAAAAAAMAAcAAAALAAEAAAABAAIAAAALAAIAAAABAAIAAAALAAMAAAABAAMAAAALAAQAAAABAAIAAAALAAUAAAABAAMAAAALAAYAAAAAAAAAAAALAAcAAAACAAEAAAALAAgAAAALAAQAAAAMAP//AAAMAAYAAAAMAAAAAAAMAAcAAAAMAAEAAAACAAIAAAAMAAIAAAACAAEAAAAMAAMAAAACAAMAAAAMAAQAAAACAAIAAAAMAAUAAAACAAMAAAAMAAYAAAAAAAAAAAAMAAcAAAAAAAEAAAAMAAgAAAAMAAQAAAANAP//AAANAAYAAAANAAAAAAANAAcAAAANAAEAAAAAAAIAAAANAAIAAAAAAAMAAAANAAMAAAAAAAAAAAANAAQAAAABAAIAAAANAAUAAAACAAEAAAANAAYAAAAAAAAAAAANAAcAAAAAAAEAAAANAAgAAAANAAQAAAAOAP//AAAOAAYAAAAOAAAAAAAOAAcAAAAOAAEAAAABAAIAAAAOAAIAAAABAAMAAAAOAAMAAAAAAAEAAAAOAAQAAAACAAIAAAAOAAUAAAACAAMAAAAOAAYAAAAAAAEAAAAOAAcAAAAAAAEAAAAOAAgAAAAOAAQAAAAPAP//AAAKAAUAAAAPAAAAAAAKAAUAAAAPAAEAAAAKAAUAAAAPAAIAAAAKAAUAAAAPAAMAAAAKAAUAAAAPAAQAAAAKAAUAAAAPAAUAAAAKAAUAAAAPAAYAAAAKAAUAAAAPAAcAAAAKAAUAAAAPAAgAAAAKAAUAAAAIAAEAAAABAAEAAAA=")

[node name="Plant" parent="." instance=ExtResource("4_1g4l2")]
position = Vector2(38, 193)

[node name="Plant2" parent="." instance=ExtResource("4_1g4l2")]
position = Vector2(77, 227)

[node name="Plant3" parent="." instance=ExtResource("4_1g4l2")]
position = Vector2(37, 227)

[node name="Plant4" parent="." instance=ExtResource("4_1g4l2")]
position = Vector2(78, 194)

[node name="Plant5" parent="." instance=ExtResource("4_1g4l2")]
position = Vector2(402, 198)

[node name="Plant6" parent="." instance=ExtResource("4_1g4l2")]
position = Vector2(441, 232)

[node name="Plant7" parent="." instance=ExtResource("4_1g4l2")]
position = Vector2(401, 232)

[node name="Plant8" parent="." instance=ExtResource("4_1g4l2")]
position = Vector2(442, 199)

[node name="PlayerSpawn" parent="." instance=ExtResource("9_wgwtb")]
position = Vector2(229, 130)

[node name="LevelTransition" parent="." instance=ExtResource("5_bx5h1")]
position = Vector2(96, -32)
level = "res://playground.tscn"
target_transition_area = "LevelTransition2"
center_player = true
side = 2

[node name="Npc" parent="." instance=ExtResource("7_ilov5")]
position = Vector2(127, 116)
npc_resource = ExtResource("8_n7tgc")

[node name="NpcBehaviorWander" parent="Npc" instance=ExtResource("8_7ly36")]
wander_range = 1

[node name="DialogInteraction" parent="Npc" instance=ExtResource("10_hsxbq")]
enabled = true

[node name="DialogText" type="Node" parent="Npc/DialogInteraction"]
script = ExtResource("11_i3bl0")
text = "Hi, [b]Hero[/b]. Is that you?"
npc_info = ExtResource("8_n7tgc")

[node name="DialogText2" type="Node" parent="Npc/DialogInteraction"]
script = ExtResource("11_i3bl0")
text = "Yeah that's me!"
npc_info = ExtResource("12_5po8f")

[node name="DialogText3" type="Node" parent="Npc/DialogInteraction"]
script = ExtResource("11_i3bl0")
text = "Nice bro.
Happy to have a hero!"
npc_info = ExtResource("8_n7tgc")

[node name="Npc2" parent="." instance=ExtResource("7_ilov5")]
position = Vector2(343, 139)
npc_resource = ExtResource("10_k8vj0")

[node name="NpcPatrolBehavior" parent="Npc2" instance=ExtResource("11_7o5jn")]

[node name="PatrolLocation" parent="Npc2/NpcPatrolBehavior" instance=ExtResource("12_y6ba8")]
modulate = Color(1, 0, 0, 1)
position = Vector2(-9, 3)

[node name="PatrolLocation2" parent="Npc2/NpcPatrolBehavior" instance=ExtResource("12_y6ba8")]
modulate = Color(1, 1, 0, 1)
position = Vector2(76, 5)

[node name="PatrolLocation3" parent="Npc2/NpcPatrolBehavior" instance=ExtResource("12_y6ba8")]
modulate = Color(0, 1, 0, 1)
position = Vector2(81, -70)

[node name="PatrolLocation4" parent="Npc2/NpcPatrolBehavior" instance=ExtResource("12_y6ba8")]
modulate = Color(0, 1, 1, 1)
position = Vector2(19, -84)

[node name="PatrolLocation5" parent="Npc2/NpcPatrolBehavior" instance=ExtResource("12_y6ba8")]
modulate = Color(0, 0, 1, 1)
position = Vector2(-29, -56)

[node name="DialogInteraction" parent="Npc2" instance=ExtResource("10_hsxbq")]
enabled = true

[node name="DialogText" type="Node" parent="Npc2/DialogInteraction"]
script = ExtResource("11_i3bl0")
text = "Yo, Hero, will you help retrieve my magical flute from the dark dungeon?"
npc_info = ExtResource("10_k8vj0")

[node name="DialogChoice" type="Node" parent="Npc2/DialogInteraction"]
script = ExtResource("16_4aeui")
npc_info = ExtResource("10_k8vj0")

[node name="DialogBranch" type="Node" parent="Npc2/DialogInteraction/DialogChoice"]
script = ExtResource("17_kchcd")
text = "Count on it!"
npc_info = ExtResource("10_k8vj0")

[node name="DialogText" type="Node" parent="Npc2/DialogInteraction/DialogChoice/DialogBranch"]
script = ExtResource("11_i3bl0")
text = "Thank you dear Hero!"
npc_info = ExtResource("10_k8vj0")

[node name="DialogText2" type="Node" parent="Npc2/DialogInteraction/DialogChoice/DialogBranch"]
script = ExtResource("11_i3bl0")
text = "Oh, and be careful of the [shake]Evil Wizard[/shake] who lurks in the dungeon!"
npc_info = ExtResource("10_k8vj0")

[node name="QuestAdvanceTrigger" parent="Npc2/DialogInteraction/DialogChoice/DialogBranch" instance=ExtResource("20_ai520")]
position = Vector2(343, 138)
signal_name = "selected"
linked_quest = ExtResource("19_f0h3u")
settings_summary = "UPDATE QUEST:
Quest: Recover Lost Magical Flute
Step: 0 - N/A
Complete: false"

[node name="DialogBranch2" type="Node" parent="Npc2/DialogInteraction/DialogChoice"]
script = ExtResource("17_kchcd")
text = "No way! Are you crazy!?"
npc_info = ExtResource("10_k8vj0")

[node name="DialogText" type="Node" parent="Npc2/DialogInteraction/DialogChoice/DialogBranch2"]
script = ExtResource("11_i3bl0")
text = "Geeze, some lousy hero you are!"
npc_info = ExtResource("10_k8vj0")

[node name="Pot" parent="." instance=ExtResource("18_7nsnu")]
position = Vector2(145, 211)

[node name="Pot2" parent="." instance=ExtResource("18_7nsnu")]
position = Vector2(174, 211)

[node name="Pot3" parent="." instance=ExtResource("18_7nsnu")]
position = Vector2(203, 211)

[node name="PressurePlate" parent="." instance=ExtResource("19_fy8rw")]
position = Vector2(245, 230)

[node name="QuestAdvanceTrigger" parent="PressurePlate" instance=ExtResource("20_ai520")]
signal_name = "activated"
linked_quest = ExtResource("21_jndck")
settings_summary = "UPDATE QUEST:
Quest: Long Quest
Step: 0 - N/A
Complete: false"

[node name="QuestActivatedSwitch" parent="." instance=ExtResource("21_qpa7b")]
position = Vector2(288, 230)
check_type = 2
react_to_global_signal = true
linked_quest = ExtResource("21_jndck")
quest_step = 1
settings_summary = "UPDATE QUEST:
Quest: Long Quest
Checking if player is on step: Step 1"

[node name="PressurePlate2" parent="QuestActivatedSwitch" instance=ExtResource("19_fy8rw")]

[node name="QuestAdvanceTrigger" parent="QuestActivatedSwitch/PressurePlate2" instance=ExtResource("20_ai520")]
signal_name = "activated"
linked_quest = ExtResource("21_jndck")
quest_step = 1
settings_summary = "UPDATE QUEST:
Quest: Long Quest
Step: 1 - Step 1
Complete: false"

[node name="QuestActivatedSwitch2" parent="." instance=ExtResource("21_qpa7b")]
position = Vector2(331, 230)
check_type = 2
react_to_global_signal = true
linked_quest = ExtResource("21_jndck")
quest_step = 2
settings_summary = "UPDATE QUEST:
Quest: Long Quest
Checking if player is on step: Step 2"

[node name="PressurePlate3" parent="QuestActivatedSwitch2" instance=ExtResource("19_fy8rw")]

[node name="QuestAdvanceTrigger" parent="QuestActivatedSwitch2/PressurePlate3" instance=ExtResource("20_ai520")]
signal_name = "activated"
linked_quest = ExtResource("21_jndck")
quest_step = 2
quest_complete = true
settings_summary = "UPDATE QUEST:
Quest: Long Quest
Step: 2 - Step 2
Complete: true"

[node name="QuestActivatedSwitch3" parent="." instance=ExtResource("21_qpa7b")]
position = Vector2(174, 173)
check_type = 3
react_to_global_signal = true
linked_quest = ExtResource("21_jndck")
quest_step = 2
settings_summary = "UPDATE QUEST:
Quest: Long Quest
Checking if quest is complete."

[node name="Pot" parent="QuestActivatedSwitch3" instance=ExtResource("18_7nsnu")]
